--- a/app/nav/navbar.component.html
+++ b/app/nav/navbar.component.html
@@ -6,7 +6,7 @@
   
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li>
+          <li [routerLink]="['/events']">
             <a >All Events</a>
           </li>
           <li><a href="">Create Event</a></li>
