--- a/app/nav/navbar.component.html
+++ b/app/nav/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" >ngEvents</a>
+        <a class="navbar-brand" [routerLink]="['/']" >ngEvents</a>
       </div>
   
       <div class="collapse navbar-collapse">
@@ -9,7 +9,7 @@
           <li [routerLink]="['/events']">
             <a >All Events</a>
           </li>
-          <li><a href="">Create Event</a></li>
+          <li><a [routerLink]="['/events/new']">Create Event</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
               Events
