--- a/app/nav/navbar.component.html
+++ b/app/nav/navbar.component.html
@@ -1,15 +1,16 @@
 <div class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" [routerLink]="['/']" >ngEvents</a>
+        <a class="navbar-brand" [routerLink]="['/']" routerLinkActive="active">ngEvents</a>
       </div>
   
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li [routerLink]="['/events']">
-            <a >All Events</a>
+          <li>
+            <a  [routerLink]="['/events']"  routerLinkActive="active"
+            [routerLinkActiveOptions]="{exact:true}">All Events</a>
           </li>
-          <li><a [routerLink]="['/events/new']">Create Event</a></li>
+          <li><a [routerLink]="['/events/new']" routerLinkActive="active">Create Event</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
               Events
@@ -25,7 +26,7 @@
         <div class="navbar-header navbar-right">
           <ul class="nav navbar-nav">
             <li>
-              <a>Welcome John</a>
+              <a [routerLink]="['user/profile']" routerLinkActive="active" >Welcome John</a>
             </li>
           </ul>
         </div>
