--- a/app/user/login.component.html
+++ b/app/user/login.component.html
@@ -1,17 +1,22 @@
 <h1>Login</h1>
 <hr>
 <div class="col-md-4">
-  <form #loginForm="ngForm" (ngSubmit)="login(loginForm.value)" autocomplete="off">
+  <form #loginForm="ngForm" (ngSubmit)="login(loginForm.value)" autocomplete="off" novalidate >
     <div class="form-group" >
       <label for="userName">User Name:</label>
-      <input id="userName" type="text" class="form-control" (ngModel)="userName" name="userName" placeholder="User Name..." />
+      <em *ngIf="loginForm.controls.userName?.invalid && 
+                 (loginForm.controls.userName?.touched || mouseoverLogin)">Required</em>
+      <input id="userName" type="text" required class="form-control" (ngModel)="userName" name="userName" placeholder="User Name..." />
     </div>
     <div class="form-group" >
       <label for="password">Password:</label>
-      <input id="password" type="password" class="form-control" (ngModel)="password" name="password" placeholder="Password..." />
+      <em *ngIf="loginForm.controls.password?.invalid  && 
+      (loginForm.controls.password?.touched || mouseoverLogin)">Required</em>
+      <input id="password" type="password" required class="form-control" (ngModel)="password" name="password" placeholder="Password..." />
     </div>
-        
-    <button type="submit" class="btn btn-primary">Login</button>
-    <button type="button" class="btn btn-default">Cancel</button>
+    <span (mouseenter)="mouseoverLogin=true" (mouseleave)="mouseoverLogin=false">
+    <button type="submit" [disabled]="loginForm.invalid" class="btn btn-primary">Login</button>
+  </span>
+    <button type="button" (click)="cancel()" class="btn btn-default">Cancel</button>
   </form>
 </div>
