--- a/app/events/event-details/create-session.component.html
+++ b/app/events/event-details/create-session.component.html
@@ -42,6 +42,6 @@
             <textarea id="abstract" rows=3 class="form-control" formControlName="abstract" placeholder="abstract..."></textarea>
           </div>
           <button type="submit" [disabled]="newSessionForm.invalid" class="btn btn-primary">Save</button>
-          <button type="button" class="btn btn-default">Cancel</button>
+          <button type="button" class="btn btn-default" (click)="cancel()">Cancel</button>
         </form>
       </div>
