--- a/app/events/event-details/event-details.component.html
+++ b/app/events/event-details/event-details.component.html
@@ -21,4 +21,11 @@
         </address>
       </div>
     </div>
+    <hr/>
+    <div class="row">
+      <div class="col-md-2"><h3 style="margin:0">Sessions</h3></div>
+      <div class="col-md-2"><a (click)="addSession()">Add Session</a></div>
+    </div>
+    <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelNewSession)="cancelNewSession($event)" ></create-session>
+    <session-list *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
   </div>
