--- a/app/events/event-details/event-details.component.html
+++ b/app/events/event-details/event-details.component.html
@@ -3,13 +3,13 @@
   
     <div class="row">
       <div class="col-md-11">
-        <h2>{{event?.name}} </h2>
+        <h2>{{event?.name | uppercase}} </h2>
       </div>
     </div>
   
     <div class="row">
       <div class="col-md-6">
-        <div><strong>Date:</strong> {{event?.date}}</div>
+        <div><strong>Date:</strong> {{event?.date | date:'shortDate'}}</div>
         <div><strong>Time:</strong> {{event?.time}}</div>
         <div><strong>Price:</strong> ${{event?.price}}</div>
       </div>
@@ -24,8 +24,18 @@
     <hr/>
     <div class="row">
       <div class="col-md-2"><h3 style="margin:0">Sessions</h3></div>
+      <div class="col-md-7">
+        <button class="btn btn-default" [class.active]="sortBy==='name'" (click)="sortBy='name'">Name</button>
+        <button class="btn btn-default" [class.active]="sortBy==='votes'" (click)="sortBy='votes'">Votes</button>
+      </div>
+      <div class="col-md-7">
+        <button class="btn btn-default" [class.active]="filterBy==='all'" (click)="filterBy='all'">All</button>
+        <button class="btn btn-default" [class.active]="filterBy==='beginner'" (click)="filterBy='beginner'">Beginner</button>
+        <button class="btn btn-default" [class.active]="filterBy==='intermediate'" (click)="filterBy='intermediate'">Intermediate</button>
+        <button class="btn btn-default" [class.active]="filterBy==='advanced'" (click)="filterBy='advanced'">Advanced</button>
+      </div>
       <div class="col-md-2"><a (click)="addSession()">Add Session</a></div>
     </div>
     <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelNewSession)="cancelNewSession($event)" ></create-session>
-    <session-list *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
+    <session-list *ngIf="!addMode" [sortBy]="sortBy" [sessions]="event?.sessions" [filterBy]="filterBy"></session-list>
   </div>
