--- a/app/events/create-event.component.html
+++ b/app/events/create-event.component.html
@@ -22,7 +22,7 @@
       <em *ngIf="newEventForm.controls.price?.invalid && (newEventForm.controls.price?.touched)">Required</em>
       <input (ngModel)="price" name="price" required id="eventPrice" type="text" type="number" class="form-control" placeholder="event price..." />
     </div>
-    <div ngModelGroup="location">
+    <div ngModelGroup="location" validateLocation>
         <div class="form-group">
         <label for="address">Event Location:</label>
         <input (ngModel)="address" name="address" id="address" type="text" class="form-control" placeholder="Address of event..." />
