--- a/app/nav/navbar.component.html
+++ b/app/nav/navbar.component.html
@@ -28,6 +28,7 @@
             <li>
               <a *ngIf="!auth.isAuthenticated()" [routerLink]="['user/login']" routerLinkActive="active" >Login</a>
               <a *ngIf="auth.isAuthenticated()" [routerLink]="['user/profile']" routerLinkActive="active" >Welcome {{auth.currentUser.firstName}}</a>
+              <span *ngIf="auth.isAuthenticated()" (click)="logout()">logout</span>
             </li>
           </ul>
         </div>
