implement update user name and details

--- a/app/user/profile.component.html
+++ b/app/user/profile.component.html
@@ -17,6 +17,7 @@
     
         <button type="submit" class="btn btn-primary">Save</button>
         <button type="button" class="btn btn-default" (click)="cancel()">Cancel</button>
+        <button type="button" class="btn btn-default" (click)="logout()">Lougout</button>
         </form>
     </div>
 </div>
